Prevent display overflow

--- a/css/master.css
+++ b/css/master.css
@@ -25,7 +25,6 @@ body {
     justify-content: space-between;
     min-width: 400px;
     min-height: 400px;
-    max-width: 400px;
     background-color: #4c5270;
     padding: 8px;
 }
@@ -36,6 +35,7 @@ body {
     justify-content: center;
     align-items: center;
     flex: 1;
+    max-width: 20%;
 }
 
 .display {
@@ -75,8 +75,6 @@ footer {
     border-radius: 2%;
     margin: 5px;
     flex: 1;
-    min-width: 0;
-    min-height: 0;
 }
 
 .btn {
